# portfolio

./: README.md  README.rst
cellular_automaton/: .gitignore  README.md  README.rst  requirements.txt
cellular_automaton/wildfire/: __main__.py  forest.py  tk_ui.py  wildfire.py
celular_automata/: .gitignore
chem_space_enumeration/: LICENCE.txt  README.md  requirements.txt
chem_space_enumeration/enumeration_app/: __init__.py  enumeration.py  main.py  output_routines.py  properties.xlsx  run.py
clinic/: .coveralls.yml  .gitignore  .pylintrc  .travis.yml  README.md  README.rst  gunicorn.conf.py  requirements.txt
clinic/clinic_app/: __init__.py  config.py  run.py
clinic/documentation/: Software Requirements Specification.md
clinic/tests/: base_test_case.py  test_api.py  test_base_service.py  test_models.py  test_population.py  test_routes.py  test_schemas.py  test_services.py
fractals-Delphi/: .gitignore  Fractals.dpr  README.md  README.rst
fractals-Delphi/fractals/: Fractals.dproj  Fractals.res  GifImage.dcu  GifImage.pas  Unit1.dfm  Unit1.pas
molecules_enumeration/: .gitignore  requirements.txt
molecules_enumeration/chem_enumeration/: enumeration.py  main.py  output_routines.py  properties.xlsx
python_package/: .gitignore  README.rst  setup.cfg
python_package/src/unique_characters/: util.py
telebot/: .gitignore  README.rst  README.txt  requirements.txt
telebot/bot/: __init__.py  log.py  main.py  my_telebot.py  sql.py
unique_characters_package/tests/: test_unique_characters.py
web_monaco_report/: README.rst  requirements.txt
(+91 files in other folders)
