[metadata]
name = unique-chars-hendelbah
version = 0.0.3
author = Teniaiev Volodymyr
author_email = vowava.567@gmail.com
description = Find unique characters with CLI or import
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://git.foxminded.com.ua/hendelbah/python_package
classifiers =
    Programming Language :: Python :: 3.8
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10
[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    unique_chars = unique_characters.__main__:main

[options.packages.find]
where = src